[package]
name = "lantern"
version = "0.1.0"
license = "MIT"
authors = ["Rohan Janaki <srohanjd@gmail.com>"]
edition = "2021"

[dependencies]
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
chrono = "0.4.23"
futures-core = "0.3"
futures-util = "0.3"
quick-xml = "0.28.1"
reqwest = { version = "0.11.14", features = ["cookies", "blocking", "json"] }
serde = "1.0.152"
serde_json = "1.0.93"
axum = "0.6.9"
anyhow = "1.0.69"
diesel = { version = "2.0.3", features = [
    "postgres_backend",
    "postgres",
    "serde_json",
    "with-deprecated",
], default-features = false }
dotenvy = "0.15.6"
url = "2.3.1"
tonic = "0.9.1"
tokio-stream = "0.1.12"
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
prost = "0.11.8"

[build-dependencies]
tonic-build = "0.9.1"
